# strokers

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
strokers/: Cargo.toml
strokers/src/: config.rs  devices.rs  lib.rs
strokers_core/: Cargo.toml
strokers_core/src/: lib.rs
strokers_device_debug/: Cargo.toml
strokers_device_debug/src/: lib.rs
strokers_device_tcode/: Cargo.toml
strokers_device_tcode/src/: lib.rs  serial.rs  tcode.rs
strokers_for_mpv/: Cargo.toml  README.md
strokers_for_mpv/src/: keybindings.rs  lib.rs  parse_opts.rs  playstate.rs  playthread.rs
strokers_funscript/: Cargo.toml
strokers_funscript/src/: lib.rs  playstate.rs  processing.rs  schema.rs  search_path.rs
