[workspace]
members = [
  "strokers",
  "strokers_core",
  "strokers_device_tcode",
  "strokers_device_debug",
  "strokers_for_mpv"
]
resolver = "2"

[workspace.dependencies]
# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
eyre = "0.6.12"

# Async
tokio = { version = "1.37.0", features = ["rt", "macros"] }
tokio-util = "0.7.11"
tokio-stream = "0.1.15"
async-trait = "0.1.80"
futures-sink = "0.3.30"
futures-util = "0.3.30"

# I/O
serial2-tokio = { version = "0.1.10", git = "https://github.com/LaurenBoutin/serial2-tokio-rs", branch = "fix_write" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"


# Our own crates in this repository
strokers = { path = "./strokers" }
strokers_core = { path = "./strokers_core" }
strokers_device_debug = { path = "./strokers_device_debug" }
strokers_device_tcode = { path = "./strokers_device_tcode" }
strokers_funscript = { path = "./strokers_funscript" }
