[package]
name = "strokers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strokers_core.workspace = true
strokers_device_tcode.workspace = true
strokers_device_debug.workspace = true

async-trait.workspace = true
eyre.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tokio.workspace = true
dirs = "5.0.1"
