[package]
name = "strokers_for_mpv"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "strokers_for_mpv"
crate-type = ["cdylib"]

[dependencies]
mpv-client = "1.1.0"

strokers.workspace = true
strokers_funscript.workspace = true

eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["fs"] }
tokio-util.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_qs = "0.13.0"

flume = "0.11.0"
